force-app/main/default/objects/OpportunityLineItem/fields/Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Number__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Source_Salesforce;Integrity_Accurate</complianceGroup>
<description>Field to capture application number</description>
    <label>Application Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>