force-app/main/default/objects/OpportunityLineItem/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Source_Salesforce;Integrity_Accurate</complianceGroup>
<description>Field to capture application status</description>
    <label>Application Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>