force-app/main/default/objects/OpportunityLineItem/fields/Expected_Settlement_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Settlement_Date__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Personal Information;Source - Salesforce</complianceGroup>
    <description>The settlement date that the customer expects</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Expected Settlement Date</label>
    <type>Date</type>
</CustomField>