force-app/main/default/objects/OpportunityLineItem/fields/Funding_purpose__c.field-meta.xml
<CustomField>
    <fullName>Funding_purpose__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Source_Salesforce;Integrity_Accurate</complianceGroup>
    <description>Funding purpose</description>
    <label>Funding purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Property Purchase or Construction</fullName>
            </value>
            <value>
                <fullName>Business Investment</fullName>
            </value>
            <value>
                <fullName>Working Capital</fullName>
            </value>
            <value>
                <fullName>Interest Rate &amp; Repayment</fullName>
            </value>
            <value>
                <fullName>Restructure, Consolidation or refinance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>