force-app/main/default/objects/OpportunityLineItem/fields/Has_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Has_Legal_Entity__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>This field is to identify whether Legal Entity is added to Opportunity Product</description>
    <label>Has Legal Entity</label>
    <type>Checkbox</type>
</CustomField>