force-app/main/default/objects/OpportunityLineItem/fields/Interest_Rate_Quoted__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Quoted__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Banker to Capture Interest Rate quoted for the product.</description>
    <label>Interest Rate Quoted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>