force-app/main/default/objects/OpportunityLineItem/fields/Opp_Product_name__c.field-meta.xml
<CustomField>
    <fullName>Opp_Product_name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>A unique identifier for this line item, automatically generated based on the product name and its sequence on this opportunity.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Sequence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>