force-app/main/default/objects/OpportunityLineItem/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Source_Salesforce;Integrity_Accurate</complianceGroup>
<description>Description of lead of should be mapped and user should be able to edit further to capture additional desc.</description>
    <label>Purpose</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>