force-app/main/default/objects/OpportunityLineItem/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <complianceGroup>Privacy_Personal_Information;Source_Salesforce;Integrity_Accurate</complianceGroup>
<description>Field to capture reference number</description>
    <label>Reference Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>