force-app/main/default/objects/OpportunityLineItem/fields/Sub_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Sub_Product_Code__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Shows the sub product code of the product associated against the opportunity</description>
    <formula>PricebookEntry.Product2.Sub_Product_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Product Code</label>
    <type>Text</type>
</CustomField>