force-app/main/default/objects/OpportunityLineItem/validationRules/CommercialSettlementDateCannotBeWeekends.validationRule-meta.xml
<ValidationRule>
    <fullName>CommercialSettlementDateCannotBeWeekends</fullName>
    <active>true</active>
    <description>Settlement date for opportunity products should only allow week days.</description>
    <errorConditionFormula>AND(
    $Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
    Opportunity.RecordType.DeveloperName = &apos;Commercial_Opportunity&apos;,
			 $User.Profile_Name__c = &apos;ANZ CCRM Standard User&apos;,
    CASE(
								MOD(  
												Expected_Settlement_Date__c - DATE(1900, 1, 7), 7
							 ),  
        0, 0,
        6, 0,
        1
			) = 0
)</errorConditionFormula>
    <errorMessage>Weekends cannot be selected as Expected Settlement Date.</errorMessage>
</ValidationRule>