force-app/main/default/objects/OpportunityLineItem/validationRules/CommercialSettlementDateCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>CommercialSettlementDateCheck</fullName>
    <active>false</active>
    <description>Expected Settlement date cannot be a past dates.</description>
    <errorConditionFormula>AND(
    $Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
    Opportunity.RecordType.DeveloperName = &apos;Commercial_Opportunity&apos;,
    $User.Profile_Name__c = &apos;ANZ CCRM Standard User&apos;,
    Expected_Settlement_Date__c &lt; TODAY() 
)</errorConditionFormula>
    <errorMessage>Expected Settlement Date cannot be a past dates.</errorMessage>
</ValidationRule>